Interim propertygen